# rust_web_app

./: .env  .gitignore  Cargo.toml  build.rs  config.yml  docker-compose.yaml  state.json
css/: base.css
javascript/: main.js
migrations/2024-04-01-210043_create_to_do_items/: down.sql  up.sql
migrations/2024-04-02-205840_create_users/: up.sql
src/: config.rs  counter.rs  database.rs  jwt.rs  main.rs  schema.rs
src/json_serialization/: login.rs  to_do_item.rs  to_do_items.rs
src/models/item/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/to_do/: enums.rs
src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
templates/: main.html
templates/components/: header.css
