[package]
name = "web_app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-service = "2.0.2"
actix-web = "4.0.1"
bcrypt = "0.13.0"
chrono = { version="0.4.19", features=["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.21"
jsonwebtoken = "8.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.23"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
redis = "0.21.5"

[build-dependencies]
serde_yaml="0.8.23"
serde ={ version = "1.0.136", features = ["derive"] }